# rust-web-boilerplate

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/api/: health.rs
app/: Cargo.toml
client/: Cargo.toml
client/src/: lib.rs  main.rs
csr/: Cargo.toml  index.html
csr/src/: main.rs
server/: Cargo.toml  build.rs
server/src/: main.rs
